src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>C501_Household_Id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Billing_Address__c</fullName>
        <formula>BillingStreet + &apos;, &apos; + BillingCity + &apos; &apos; + BillingState + &apos; &apos; + BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Merge_Account__c</fullName>
        <label>Merge Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Merge_Action__c</fullName>
        <label>Merge Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>C501_Merge_Actions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Merge_Confidence_From__c</fullName>
        <label>Merge Confidence From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C501_Merge_Confidence_To__c</fullName>
        <label>Merge Confidence To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C501_Merge_Confidence__c</fullName>
        <label>Confidence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C501_Merge_Id__c</fullName>
        <label>Merge Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Merge_Metric_Name__c</fullName>
        <label>Rule</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Merge_Rule__c</fullName>
        <label>Merge Rule</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Merge_Target__c</fullName>
        <label>Merge Target</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Shipping_Address__c</fullName>
        <formula>ShippingStreet + &apos;, &apos; + ShippingCity + &apos; &apos; + ShippingState + &apos; &apos; + ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
</CustomObject>